--- a/27-03.html
+++ b/27-03.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Vocab for the day!</title>
-    <link rel="stylesheet" href="C:\Users\Sriya\Desktop\web dev\vocabulary\styles.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
 
